# Code

GoogleTutorial/: CMakeLists.txt  main.cpp
IINI4003/: CMakeLists.txt  main.cpp
IINI4003/Eksamen/: Butikk.hpp  CMakeLists.txt  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  main.cpp
IINI4003/Task01/: CMakeLists.txt  main.cpp
IINI4003/Task02/: CMakeLists.txt  oppg2.md  oppg3.md  oppg4.cpp  oppg5.cpp  oppg6.cpp
IINI4003/Task02-2/: oppg1.cpp
IINI4003/Task03/: CMakeLists.txt  circle.cpp  commodity.hpp  oppg4.cpp
IINI4003/Task04/: CMakeLists.txt  main.cpp  oppg2.cpp
IINI4003/Task05/: CMakeLists.txt  main  main.cpp
IINI4003/Task06-2/: CMakeLists.txt  main.cpp
IINI4003/Task08/: CMakeLists.txt  Pair.cpp  oppg1.cpp  oppg2.cpp
IINI4003/Task09/: CMakeLists.txt  main.cpp
Juci-projects/tutorial/: CMakeLists.txt
TDAT2004/Lecture03/: CMakeLists.txt  main.cpp
TDAT2004/Lecture1/: main.cpp
TDAT2004/Task01/: CMakeLists.txt  findPrime.cpp  findPrime.h  main.cpp
TDAT2004/Task01-1/: CMakeLists.txt  main.cpp
TDAT2004/Task02/: CMakeLists.txt  Workers.cpp  Workers.h  main.cpp
TDAT3002/Task01/: Oppgaveark1.xlsx
TDAT3020/: Task12.tar  Task13.tar
TDAT3020/Eksamen/: oppg1.cpp  oppg13.c
TDAT3020/Task03/: fil1.c  fil2.c  patchfil
TDAT3020/Task05/: oppg1  oppg3  oppg4  oppg5  oppg6  zipper.sh
TDAT3020/Task06/: fuzzing.c  rep.c
TDAT3020/Task11/: epostsjekk.sh  oppgave1.md  oppgave2.md  sjekkepost.sh
TDAT3020/Task12/: Oppg1.txt
TDAT3020/Task13/: oppg1.txt  oppg2.txt
TDAT3020/Task14/: oppg1.py  oppg2.py  oppg4.txt  oppg5.py
TDAT3020/Task16/: oppg1.md  (+5 more)
(+63 files in other folders)
